# clion-conan-cmake

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
